CSS and whitelist function
 - Added css to minimize clutter
 - Fixed an array being turned into a string
 - Added whitelisting and blocking
 - Added a display for what tag is being hidden

--- a/Manifest.json
+++ b/Manifest.json
@@ -12,6 +12,7 @@
       "matches": ["http://www.twitter.com/*",
                    "https://twitter.com/*"],
       "js": [ "JS/contentScript.js"],
+      "css": ["CSS/bb.css"],
       "run_at": "document_end"
     }
   ],
